# note_ai_crawler

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: git.mdc  requirements-definition.mdc  task-workflow.mdc
prompts/: requirements-definition.txt  task-workflow.txt
src/: __init__.py  crawler.py  utils.py
tests/: test_crawler.py
